fix up comments and styling on Firefox

--- a/src/webui/components/context_editor/style.module.scss
+++ b/src/webui/components/context_editor/style.module.scss
@@ -126,6 +126,11 @@
 
     button {
       cursor: pointer;
+
+      &:active {
+        background: var(--palette-fg);
+        color: black;
+      }
     }
 
     input[type="range"] {
